<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/gridLayout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:columnCount="2"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:useDefaultMargins="true"
    tools:context="com.deitel.tipcalculator.MainActivity" >

    <TextView
        android:id="@+id/amountTextView"
        android:layout_column="0"
        android:layout_gravity="right"
        android:layout_row="1"
        android:labelFor="@+id/amountEditText"
        android:text="@string/amount"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/amountEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:digits="0123456789"
        android:ems="10"
        android:inputType="number"
        android:labelFor="@+id/amountEditText"
        android:maxLength="6" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/amountDisplayTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_gravity="fill_horizontal"
        android:layout_row="1"
        android:background="@android:color/holo_blue_bright"
        android:maxLength="6"
        android:padding="@dimen/textview_padding"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/customPercentTextView"
        android:layout_column="0"
        android:layout_gravity="right|center_vertical"
        android:layout_row="2"
        android:text="@string/custom_tip_percentage"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <SeekBar
        android:id="@+id/customTipSeekBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_gravity="fill_horizontal|top"
        android:layout_row="2"
        android:max="30"
        android:progress="18" />

    <LinearLayout
        android:id="@+id/percentLinearLayout"
        android:layout_column="1"
        android:layout_gravity="fill_horizontal" >

        <TextView
            android:id="@+id/percent15TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/fifteen_percent"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/percentCustomTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/eighteen_percent"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/tipLinearLayout"
        android:layout_column="1"
        android:layout_gravity="top|fill_horizontal"
        android:layout_row="16" >

        <TextView
            android:id="@+id/tip15TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginRight="@dimen/textview_padding"
            android:layout_weight="1"
            android:background="@android:color/holo_orange_light"
            android:padding="@dimen/textview_padding"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/tipCustomTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@android:color/holo_orange_light"
            android:padding="@dimen/textview_padding"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/totalLinearLayout"
        android:layout_column="1"
        android:layout_gravity="top|fill_horizontal"
        android:layout_row="17" >

        <TextView
            android:id="@+id/total15TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginRight="@dimen/textview_padding"
            android:layout_weight="1"
            android:background="@android:color/holo_orange_light"
            android:padding="@dimen/textview_padding"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/totalCustomTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@android:color/holo_orange_light"
            android:padding="@dimen/textview_padding"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLay3"
        android:layout_column="1"
        android:layout_gravity="top|fill_horizontal"
        android:layout_row="5" >

        <RadioGroup
            android:id="@+id/radioGroup1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
        </RadioGroup>

        <RadioButton
            android:id="@+id/radio1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/atax" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout01"
        android:layout_column="1"
        android:layout_gravity="top|fill_horizontal"
        android:layout_row="18" >

        <TextView
            android:id="@+id/textV02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginRight="@dimen/textview_padding"
            android:layout_weight="1"
            android:background="@android:color/holo_orange_light"
            android:padding="@dimen/textview_padding"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textV03"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@android:color/holo_orange_light"
            android:padding="@dimen/textview_padding"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout02"
        android:layout_column="1"
        android:layout_gravity="top|fill_horizontal"
        android:layout_row="20" >

        <TextView
            android:id="@+id/textV04"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginRight="@dimen/textview_padding"
            android:layout_weight="1"
            android:background="@android:color/holo_orange_light"
            android:padding="@dimen/textview_padding"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textV05"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@android:color/holo_orange_light"
            android:padding="@dimen/textview_padding"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

    <TextView
        android:id="@+id/TextView03"
        android:layout_column="0"
        android:layout_gravity="right|bottom"
        android:layout_row="18"
        android:text="@string/taxto"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView2"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_gravity="right|bottom"
        android:layout_row="20"
        android:text="@string/perper"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/totalTextView"
        android:layout_column="0"
        android:layout_gravity="right|bottom"
        android:layout_row="17"
        android:text="@string/total"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/tipTextView"
        android:layout_column="0"
        android:layout_gravity="right|bottom"
        android:layout_row="16"
        android:text="@string/tip"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <RadioButton
        android:id="@+id/radio0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_gravity="left|bottom"
        android:layout_row="5"
        android:checked="true"
        android:text="@string/btax" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="44dp"
        android:layout_column="0"
        android:layout_gravity="right|top"
        android:layout_row="21"
        android:ems="10"
        android:inputType="numberSigned" />

</GridLayout>